--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /.vs/水星工程_BackendExamHub/FileContentIndex
 /.vs/水星工程_BackendExamHub/v17
 /obj
+/.vs/BackendExamHub/FileContentIndex
+/bin/Debug/net8.0
